--- a/app/src/main/res/layout/activity_test_result.xml
+++ b/app/src/main/res/layout/activity_test_result.xml
@@ -36,7 +36,7 @@
     <TextView
         android:id="@+id/exercise_text"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/profile_separator"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:gravity="center_horizontal"
