--- a/app/src/main/res/layout/activity_show_prev_results.xml
+++ b/app/src/main/res/layout/activity_show_prev_results.xml
@@ -45,6 +45,18 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:textAlignment="center"
             android:gravity="center_horizontal"/>
+
+        <TextView
+            android:id="@+id/average"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/idPastTests"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:layout_centerInParent="true"
+            android:textColor="@android:color/holo_orange_dark"
+            android:layout_marginTop="@dimen/activity_vertical_margin"/>
+
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
