--- a/app/src/main/res/layout/activity_test_result.xml
+++ b/app/src/main/res/layout/activity_test_result.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/Header"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/test_header"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
